--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,12 +28,23 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  connectivity_widget: ^0.1.7
+  dartz: ^0.9.2
+  data_connection_checker: ^0.3.4     # https://pub.dev/packages/data_connection_checker 
+  device_info_plus: ^0.7.2            # https://pub.dev/packages/device_info_plus/versions/0.7.2
+  equatable: ^1.2.6                   # https://pub.dev/packages/equatable/versions/1.2.6
+  flutter_bloc: ^6.1.2                # https://pub.dev/packages/flutter_bloc/versions/6.1.2
+  get_it: ^5.0.6                      # https://pub.dev/packages/get_it/versions/5.0.6
+  http: ^0.12.2                       # https://pub.dev/packages/http/versions/0.12.2
+  intl: ^0.16.1                       # https://pub.dev/packages/intl/versions/0.16.1
+  json_annotation: ^3.1.1             # https://pub.dev/packages/json_annotation/versions/3.1.1
+  modal_bottom_sheet: ^1.0.0+1        # https://pub.dev/packages/modal_bottom_sheet/versions/1.0.0+1
+  package_info_plus: ^0.6.4           # https://pub.dev/packages/package_info_plus/versions/0.6.4
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  json_serializable: ^3.5.1           # https://pub.dev/packages/json_serializable/versions/3.5.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
